"user-select none" causes selection to incorrectly escape from clicked container https://bugs.webkit.org/show_bug.cgi?id=57289

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2011-12-15
Reviewed by Ryosuke Niwa.

Source/WebCore:

Not selecting the nearest word from the target node if target node has -webkit-user-select:none

Test: fast/events/mouse-double-triple-click-should-not-select-next-node-for-user-select-none.html

* page/EventHandler.cpp:
(WebCore::EventHandler::updateSelectionForMouseDownDispatchingSelectStart):
If target node has webkit-user-select:none style then do not update the selection.

LayoutTests:

* fast/events/mouse-double-triple-click-should-not-select-next-node-for-user-select-none-expected.txt: Added.
* fast/events/mouse-double-triple-click-should-not-select-next-node-for-user-select-none.html: Added.
* fast/js/resources/js-test-pre.js:
(shouldNotBe):
Added new helper function to check for inequality.

Canonical link: https://commits.webkit.org/91286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102918 268f45cc-cd09-0410-ab3c-d52691b4dbfc